[package]
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32-nucleo64-sandbox"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2"
nb = "0.1.2"
volatile = "0.4.3"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f401"]

[dependencies.stm32f4]
version = "0.12.1"
features = ["stm32f401", "rt"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-nucleo64-sandbox"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
