[package]
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "sandbox-stm32f4-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.5"
panic-halt = "0.2.0"
embedded-hal = "0.2"
nb = "0.1.2"
volatile = "0.4.3"
cmim = "0.2.1"
heapless = "0.5.6"
sh1106 = "^0.3.4"
embedded-graphics = "0.6.2"

[dependencies.stm32f4xx-hal]
version = "^0.8.3"
features = ["rt", "stm32f401"]

[dependencies.stm32f4]
version = "^0.12.1"
features = ["stm32f401", "rt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
